added name and customer exist test

--- a/CollectionsProject/Collection.Tests/Collection.Tests.csproj
+++ b/CollectionsProject/Collection.Tests/Collection.Tests.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CollectionsProject\CollectionsProject.csproj">
+      <Project>{cdb66484-4bfa-48b4-b460-cc17f38ef9e0}</Project>
+      <Name>CollectionsProject</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
